# Mavlink-companion-log-service

./: .clang-format  .gitignore  CHANGELOG.md  CITATION.cff  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md
config/: config.toml  sample_master_config.toml
docs/: architecture.md  companion-wfb.md  configuration.md  durability.md  protocol.md
docs/reports/: archive-resilience.md  log-download-robustness.md  streaming-download-integrity.md
include/mcls/: ArchiveSummary.hpp  ChunkCoverageTracker.hpp  CompanionCommandQueue.hpp  CompanionDiagnostics.hpp  CompanionProtocol.hpp  CompanionUdpServer.hpp  Config.hpp  Crc32.hpp  DataFlashValidator.hpp  Database.hpp  DroneLogService.hpp  FcSampleOffsets.hpp  FlightMonitor.hpp  LogDownloader.hpp  Logger.hpp  MavlinkClient.hpp  MavlinkLogProtocol.hpp  ReceivedRanges.hpp  ServiceSnapshot.hpp  Sha256.hpp  StorageManager.hpp  StreamDownloadSession.hpp  TcpTransport.hpp  Transport.hpp  Types.hpp  UdpTransport.hpp  VideoRecorder.hpp
scripts/: cmake-build-common.sh  install.sh  uninstall.sh  update.sh
src/: ArchiveSummary.cpp  ChunkCoverageTracker.cpp  CompanionDiagnostics.cpp  CompanionProtocol.cpp  CompanionUdpServer.cpp  Config.cpp  Crc32.cpp  DataFlashValidator.cpp  Database.cpp  DroneLogService.cpp  FcSampleOffsets.cpp  FlightMonitor.cpp  LogDownloader.cpp  Logger.cpp  MavlinkClient.cpp  ReceivedRanges.cpp  ServiceSnapshot.cpp  Sha256.cpp  SocketPlatform.hpp  StorageManager.cpp  StreamDownloadSession.cpp  TcpTransport.cpp  Transport.cpp  UdpTransport.cpp  VideoRecorder.cpp  main.cpp
systemd/: mavlink-companion-log-service.service
tests/: CMakeLists.txt  test_chunk_coverage.cpp  test_companion_protocol.cpp  test_config.cpp  test_database.cpp  test_dataflash_validator.cpp  test_fc_sample_offsets.cpp  test_mavlink_log_protocol.cpp  test_received_ranges.cpp  test_service_snapshot.cpp  test_sha256.cpp
